--- a/jamfStatus/jamfStatus.entitlements
+++ b/jamfStatus/jamfStatus.entitlements
@@ -2,13 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>hideMenubarIcon</key>
-	<false/>
-	<key>hideUntilStatusChange</key>
-	<false/>
-	<key>launchAgent</key>
-	<false/>
-	<key>pollingInterval</key>
-	<integer>300</integer>
+	<key>com.apple.security.app-sandbox</key>
+	<true/>
+	<key>com.apple.security.network.client</key>
+	<true/>
 </dict>
 </plist>
