--- a/jamfStatus.xcodeproj/xcshareddata/xcschemes/jamfStatus.xcscheme
+++ b/jamfStatus.xcodeproj/xcshareddata/xcschemes/jamfStatus.xcscheme
@@ -73,7 +73,7 @@
    </AnalyzeAction>
    <ArchiveAction
       buildConfiguration = "Release"
-      revealArchiveInOrganizer = "YES">
+      revealArchiveInOrganizer = "NO">
       <PreActions>
          <ExecutionAction
             ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
